<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="about_about">
        Aplikacija SportLoc služi za lakše pronalaženje i sudjelovanje u sportskim događajima u vašoj okolini.
        Trenutno postoji određeni broj sportova koji se mogu staviti pod događaj. Ukoliko vaš sport nije na
        popisu, odaberite Ostalo. Za sve ostale upite, pohvale i kritike kontaktirajte nas e-mailom klikom na gumb
        ispod.
    </string>
    <string name="about_authors">
        Autori ove aplikacije su članovi malog tima na kolegiju Analiza i razvoj programa:\n
        - Ivan \"Bogi\" Bogović\n
        - Filip \"Fićo\" Crnko\n
        - Vedran \"Veki\" Gložinić\n
        - Gabriel \"Ilić\" Ilić\n
        - Zlatko \"Meho\" Mehanović\nSvi članovi studiraju na Fakultetu Organizacije i Informatike u Varaždinu.
    </string>
    <string name="about_choose">"Izaberite aplikaciju za slanje e-maila:"</string>
    <string name="about_contact">Kontaktirajte nas</string>
    <string name="about_email">sportloc@heroku.com</string>

    <string name="app_logo">Logo aplikacije</string>
    <string name="app_name">SportLoc</string>

    <string name="btn_cancel_changes">Odustani</string>
    <string name="btn_edit">Uredi</string>
    <string name="btn_save_changes">Spremi</string>

    <string name="comment_commentator_username">Komentar korisnika <b> </b></string>

    <string name="event_creation_error">Došlo je do pogreške prilikom izrade događaja!</string>
    <string name="event_details_address">Adresa</string>
    <string name="event_details_capacity">Kapacitet:</string>
    <string name="event_details_creator">Izradio:</string>
    <string name="event_details_description">Opis</string>
    <string name="event_details_end">Kraj</string>
    <string name="event_details_join">Prijavi se</string>
    <string name="event_details_leave">Odjavi se</string>
    <string name="event_details_leave_event">Događaj napušten</string>
    <string name="event_details_map">Prikaz na karti</string>
    <string name="event_details_request_sent">Zahtjev poslan</string>
    <string name="event_details_select_address">Odaberite adresu</string>
    <string name="event_details_select_end">Odaberite kraj</string>
    <string name="event_details_select_open">Otvoren</string>
    <string name="event_details_select_private">Privatno</string>
    <string name="event_details_select_start">Odaberite početak</string>
    <string name="event_details_start">Početak</string>
    <string name="event_details_title">Naziv događaja</string>
    <string name="event_details_approved_users">Trenutni sudionici</string>
    <string name="event_details_pending_users">Poslani zahtjevi</string>
    <string name="event_details_blocked_users">Blokirani korisnici</string>

    <string name="event_list_details">Više informacija</string>

    <string name="forgotten_password_email">E-mail</string>
    <string name="forgotten_password_empty_error">Polje za unos e-mail adrese ne smije biti prazno!</string>
    <string name="forgotten_password_fail">Unijeli ste pogrešnu e-mail adresu!</string>
    <string name="forgotten_password_info">Unesite vašu e-mail adresu kako bismo vam poslali novu lozinku:</string>
    <string name="forgotten_password_send">Pošalji</string>
    <string name="forgotten_password_success">Obnavljanje lozinke uspješno</string>

    <string name="general_connection_error">Pojavila se pogreška! Provjerite internetsku vezu i pokušajte ponovo.</string>

    <string name="login_fail">Unijeli ste pogrešno korisničko ime ili lozinku!</string>
    <string name="login_forgotten_password">Zaboravljena lozinka?</string>
    <string name="login_internal_storage_error">Pogreška prilikom spremanja korisničkih podataka u lokalnu memoriju!</string>
    <string name="login_login">Prijava</string>
    <string name="login_password">Lozinka</string>
    <string name="login_password_empty_error">Polje za unos lozinke ne smije biti prazno!</string>
    <string name="login_password_length_error">Polje za unos lozinke mora sadržavati minimalno %d znakova!</string>
    <string name="login_register">Registracija</string>
    <string name="login_success">Prijava uspješna</string>
    <string name="login_username">Korisničko ime</string>
    <string name="login_username_empty_error">Polje za unos korisničkog imena ne smije biti prazno!</string>
    <string name="login_username_length_error">Polje za unos korisničkog imena mora sadržavati minimalno %d znakova!</string>

    <string name="main_account">Vaš račun</string>
    <string name="main_facebook">Facebook</string>
    <string name="main_google">Google</string>
    <string name="main_login">Prijava:</string>

    <string name="nav_drawer_about">O aplikaciji</string>
    <string name="nav_drawer_event_list">Pregled događaja</string>
    <string name="nav_drawer_events">Događaji</string>
    <string name="nav_drawer_logout">Odjava</string>
    <string name="nav_drawer_my_events">Moji događaji</string>
    <string name="nav_drawer_new_event">Izradi događaj</string>
    <string name="nav_drawer_other">Ostalo</string>
    <string name="nav_drawer_profile">Moj profil</string>
    <string name="nav_drawer_search_filter">Pretraga i filter</string>
    <string name="nav_drawer_settings">Postavke</string>

    <string name="profile_change_settings">Uredi korisničke podatke</string>
    <string name="profile_comment">Komentiraj</string>
    <string name="profile_comments">Komentari</string>
    <string name="profile_description">Osobne informacije</string>
    <string name="profile_description_edit">Napišite nešto o sebi</string>
    <string name="profile_edit_error">Neuspješna promjena. Provjerite internetsku vezu</string>
    <string name="profile_edit_failure">Neuspješna promjena stavki</string>
    <string name="profile_edit_complete">Uspješna promjena stavki</string>
    <string name="profile_email_edit">Vaša e-mail adresa</string>
    <string name="profile_gender_age">Spol i dob</string>
    <string name="profile_name_edit">Vaše ime</string>
    <string name="profile_name_empty">Polje za ime ne smije biti prazno</string>
    <string name="profile_name_surname">Ime i prezime korisnika</string>
    <string name="profile_password_count">Lozinka mora sadržavati barem 6 znakova</string>
    <string name="profile_password_edit">Lozinka</string>
    <string name="profile_show_password">Prikaži lozinku</string>
    <string name="profile_surname_edit">Vaše prezime</string>
    <string name="profile_surname_empty">Polje za prezime ne smije biti prazno</string>
    <string name="profile_username">Korisničko ime</string>
    <string name="profile_write_error">Morate prvo glasati kako bi komentirali!</string>

    <string name="registration_choose">Odaberite</string>
    <string name="registration_dob">Datum rođenja</string>
    <string name="registration_email">E-mail</string>
    <string name="registration_email_exists">Ovaj e-mail je već zauzet!</string>
    <string name="registration_gender">Spol</string>
    <string name="registration_male">Muško</string>
    <string name="registration_name">Ime</string>
    <string name="registration_password">Lozinka</string>
    <string name="registration_send">Registriraj se</string>
    <string name="registration_password_count">Lozinka mora sadržavati barem 6 znakova</string>
    <string-array name="registration_spinner">
        <item>Muško</item>
        <item>Žensko</item>
    </string-array>
    <string name="registration_success">Uspješno ste se registrirali!</string>
    <string name="registration_surname">Prezime</string>
    <string name="registration_user_exists">Ovakvo korisničko ime već postoji!</string>
    <string name="registration_username">Korisničko ime</string>

    <string name="title_activity_event_details">Događaj</string>
    <string name="title_activity_event_members">Sudionici</string>
    <string name="title_activity_maps">Map</string>

    <string name="write_comment_error">Greška. Provjerite Internetsku vezu</string>
    <string name="write_comment_exists">Već ste ostavili komentar na ovom profilu!</string>
    <string name="write_comment_length">Komentar mora sadržavati minimalno 20 znakova!</string>
    <string name="write_comment_success">Komentar uspješno zapisan</string>
    <string name="search_settings_selected">Odabrani modul pretraživanja:</string>

</resources>
