<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_drawer_events">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_event_list"
                    android:icon="@drawable/ic_menu_event_list"
                    android:title="@string/nav_drawer_event_list" />
                <item
                    android:id="@+id/nav_new_event"
                    android:icon="@drawable/ic_menu_new_event"
                    android:title="@string/nav_drawer_new_event" />
                <item
                    android:id="@+id/nav_my_events"
                    android:icon="@drawable/ic_menu_event_list"
                    android:title="@string/nav_drawer_my_events" />
                <item
                    android:id="@+id/nav_search_filter"
                    android:icon="@drawable/ic_menu_search"
                    android:title="@string/nav_drawer_search_filter" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_drawer_other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_profile"
                    android:title="@string/nav_drawer_profile" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/nav_drawer_about" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/nav_drawer_logout" />
            </group>
        </menu>
    </item>
</menu>