<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="hr.foi.air.sportloc.service.model.UserModel" />
    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sv_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@{user.username}"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="visible"
                android:hint="@string/login_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/profile_name_edit"
                android:inputType="text"
                android:visibility="visible"
                android:text="@{user.name}"
                app:layout_constraintEnd_toStartOf="@+id/et_surname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/profile_surname_edit"
                android:inputType="text"
                android:visibility="visible"
                android:text="@{user.surname}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/profile_email_edit"
                android:inputType="textEmailAddress"
                android:visibility="visible"
                android:text="@{user.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/login_password"
                android:inputType="textPassword"

                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <TextView
                android:id="@+id/tv_show_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/profile_show_password"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <Switch
                android:id="@+id/sw_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/et_personal_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_personal_information"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="top|start"
                android:text="@{user.description}"
                android:hint="@string/profile_description"
                android:inputType="text|textMultiLine"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_show_password"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_save"
                style="@style/style_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_general"
                android:text="@string/btn_save_changes"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_personal_information" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/style_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_general"
                android:text="@string/btn_cancel_changes"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_save"
                app:layout_constraintTop_toBottomOf="@+id/et_personal_information" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>